# StateMachineCompiler

./: .gitignore  README.md  count  things to do better
Compiler/: CMakeLists.txt  CodeGen.cpp  Command.h  Compiler.h  Enums.h  ExpressionCodeGenerator.cpp  ExpressionCodeGenerator.h  ExpressionTreeNodes.cpp  FunctionCodeGen.cpp  FunctionCodeGen.h  FunctionSymbol.cpp  FunctionSymbol.h  Grammar.txt  Lexer.cpp  Lexer.h  Optimiser.cpp  Optimiser.h  Parsing.cpp  State.cpp  State.h  SymbolTable.cpp  SymbolTable.h  Token.cpp  Token.h  main.cpp  test.out  warnings.txt
Compiler/Testing/: TAG
Compiler/examples/: callframetest.f  constcomp.f  delet.f  fac.f  fizzbuzz.f  mc91.f  unreachableCode.f
Compiler/examples/array examples/: basictest.f  test2.f
Compiler/examples/loop examples/: ackermann.f  bubblesort.f  delet.f  divisors.f  evenodd.f  fizzbuzz.f  indirect.f  loopFuncTest.f  loopFuncTestParams.f  multiplication.f  mutualEvenOdd.f  mutualEvenOddNoParams.f  mutualEvenOddParams.f  nestedTest.f
Compiler/examples/report examples/: array.f  bubblesort.f  extrapolate.f  gcd.f  mult.f  relchange.f  twovars.f
Compiler/misc/: Grammar.txt  conditiontest.f  constcomp.f  expressiontest.f  fizzbuzz.f  fizzbuzzold.f  functioncalls.f  iftest.f  linear.f  sameAssignmentTest.f  test.f  test2.f  unarytest.f
Compiler/source/: Command.cpp  Command.h  main.cpp
Compiler/source/CFGOpt/: CFG.cpp  CFG.h  CFGNodes.cpp  DataFlow.cpp  DataFlow.h  LengTarj.cpp  LengTarj.h  Loop.h  Optimiser.cpp  Optimiser.h  State.cpp  State.h  SymbolicVariable.cpp  SymbolicVariable.h
Compiler/source/compile/: CodeGen.cpp  Compiler.cpp  Compiler.h  ExpressionCodeGenerator.cpp  ExpressionCodeGenerator.h  ExpressionTreeNodes.cpp  FunctionCodeGen.cpp  FunctionCodeGen.h  FunctionTable.cpp  Functions.cpp  Functions.h  Lexer.cpp  Parsing.cpp  Reporter.cpp  Reporter.h  SymbolTable.cpp  SymbolTable.h  Token.cpp  Token.h  VarWrappers.h
Compiler/source/symbolic/: CommandAcceptSymbolicExecution.cpp  CommandFunctionality.cpp  DFSSymbolicExecution.cpp  DFSSymbolicExecution.h  DijkstraSymbolicExecution.cpp  DijkstraSymbolicExecution.h  LoopValidation.cpp  NodeEffectSummary.cpp  NodeEffectSummary.h  SymbolicArray.cpp  SymbolicArray.h  SymbolicDouble.cpp  SymbolicDouble.h  SymbolicExecution.cpp  SymbolicExecution.h  SymbolicStack.cpp  SymbolicStack.h  SymbolicString.cpp  SymbolicVarSet.cpp  SymbolicVarSet.h  SymbolicVarWrappers.h  SymbolicVariable.cpp  SymbolicVariable.h  SymbolicVariables.h  VarWrappers.cpp  VarWrappers.h
Compiler/source/verify/: SymbolicVariable.cpp  SymbolicVariable.h
FSM/: CMakeLists.txt  Command.cpp  Command.h  Enums.h  FSM.cpp  FSM.h  FSMParser.cpp  FSMParser.h  ScopeManager.cpp  ScopeManager.h  State.cpp  State.h  Variable.cpp  Variable.h  main.cpp
FSM/misc/: ackermann.fs  expressionresult.fs  facres.fs  fizz1.fs  fizz2.fs  fizzoptimised1.fs  fizzresult.fs  functioncallresult.fs  gcd.fs  gcdold.f  linearresult.fs  loopFuncTest.fs  loopfunctest.fs  mutualEvenOddResult.fs  stackstatetest.fs  stacktest.fs  stringtest.fs  test1.fs
Final Paper/: durhampaper.sty  projectpaper.aux  projectpaper.bbl  projectpaper.bib  projectpaper.blg  projectpaper.tex
